[package]
name = "live-code-sdl2-opengl-2_1-template"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]

#this is needed so the state manipulation dynamic lib is put in the right place
[workspace]

[dependencies]
#TODO can this be a dev dependacy?
libloading = "0.4"

[dependencies.common]
path = "./common"

[dependencies.state_manipulation]
path = "./state_manipulation"
