[package]
name = "tiny-live-code-example"
version = "0.1.0"
authors = ["Ryan1729 <Ryan1729@gmail.com>"]

#this is needed so the state manipulation dynamic lib is put in the right place
[workspace]

[dependencies]
libloading = "0.4"

[dependencies.state_manipulation1]
path = "./state_manipulation1"

[dependencies.state_manipulation1000]
path = "./state_manipulation1000"
